# simple-ga-solver

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  Eight Queens Demo.ipynb  Oito Rainhas.ipynb  README.MD  index.rst  pyproject.toml
demos/: requirements.txt
demos/pt-br/: Encontrando Máximos de Funções.ipynb  O Problema das Oito Rainhas.ipynb  Oito Rainhas.ipynb  Raízes de um Polinômio.ipynb
docs/source/: conf.py  ga_solver.rst  index.rst  pop_selectors.rst
docs/source/_build/html/: .buildinfo  about.html  ga_solver.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/_build/html/.doctrees/: about.doctree  environment.pickle  ga_solver.doctree  index.doctree  license.doctree
docs/source/_build/html/_sources/: index.rst.txt  license.rst.txt
ga_solver/: __init__.py  ga_solver.py  pop_selectors.py  selectors.py
tests/: test_pop_selectors.py  test_range_dict.py  test_selectors.py  test_solver.py
