[tool.poetry]
name = "ga_solver"
version = "0.1.2"
description = "A simple, pure-python Genetic Algorithm solver"
authors = ["Felipe 'Bidu' Rodrigues <felipe@felipevr.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pytest-cov = "^2.9"

[tool.poetry.dev-dependencies]
pytest = {version = "^5.3"}
pre-commit = {version = "^2.0"}
black = {version = "^18.3-alpha.0", allow-prereleases = true}
pylint = "^2.4"
ipython = "^7.13"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
