[project]
name = "ga_solver"
version = "0.1.2"
description = "A simple, pure-python Genetic Algorithm solver"
authors = [{name = "Felipe 'Bidu' Rodrigues", email = "felipe@felipevr.com"}]
license = {text = "MIT"}
requires-python = ">=3.6"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=5.3",
    "pre-commit>=2.0",
    "black>=18.3.0a0",
    "pylint>=2.4",
    "ipython>=7.13",
    "pytest-cov>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=5.3",
    "pre-commit>=2.0",
    "black>=18.3.0a0",
    "pylint>=2.4",
    "ipython>=7.13",
    "pytest-cov>=2.9",
]
